<resources>
    <string name="app_name">Multihop WiFi Direct</string>
    <string name="change_role_button">Change Role</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="connect_peer_button">Conn</string>
    <string name="disconnect_peer_button">Disconn</string>
    <string name="discover_peers_button">Discover</string>
    <string name="empty" />
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="no">no</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="yes">yes</string>
</resources>
