<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_become_go" android:id="@+id/atn_group_owner" android:title="@string/enable_p2p_button"
        app:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_change_role" android:id="@+id/atn_change_role" android:title="@string/change_role_button"
        app:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_action_on_off" android:id="@+id/atn_direct_enable" android:title="@string/enable_p2p_button"
        app:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_action_discover" android:id="@+id/atn_direct_discover" android:title="@string/discover_peers_button"
        app:showAsAction="ifRoom|withText" />
</menu>