<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="3.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_me" />
    <View android:gravity="center_vertical" android:background="@android:color/holo_blue_light" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:background="?android:activatedBackgroundIndicator" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="?android:listPreferredItemHeight"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView android:id="@+id/icon" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="2.0dip" android:src="@drawable/machine" />
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:gravity="center_vertical" android:id="@+id/my_name" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <TextView android:ellipsize="marquee" android:id="@+id/my_status" android:layout_width="fill_parent" android:layout_height="0.0dip" android:singleLine="true" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_peers" />
    <View android:gravity="center_vertical" android:background="@android:color/holo_blue_light" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:drawSelectorOnTop="false" android:layout_weight="1.0" />
    <TextView android:layout_gravity="center" android:id="@android:id/empty" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/empty_message" />
</LinearLayout>