<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="horizontal" android:background="@drawable/details_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <Button android:id="@+id/btn_uni_cast_ipv6" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="V6T" />
            <Button android:id="@+id/btn_broad_cast_ipv6" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="V6U" />
            <EditText android:id="@+id/et_message" android:layout_width="140.0dip" android:layout_height="wrap_content" />
            <Button android:id="@+id/btn_sendtext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Send" />
            <Button android:textSize="14.0dip" android:id="@+id/btn_send_anonymity_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="Anonym. Send" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <Button android:id="@+id/btn_connect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/connect_peer_button" />
            <Button android:id="@+id/btn_disconnect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disconnect_peer_button" />
            <Button android:id="@+id/btn_start_client" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/get_file_button" />
            <Button android:id="@+id/btn_broad_cast" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="SendUDP" />
            <Button android:id="@+id/btn_uni_cast" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="SendTCP" />
            <Button android:id="@+id/btn_test" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TEST" />
            <Button android:textSize="14.0dip" android:id="@+id/btn_test2" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="Decrypt Anonym. Msgs" />
        </LinearLayout>
        <TextView android:id="@+id/device_address" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:id="@+id/device_info" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:id="@+id/group_owner" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:id="@+id/group_ip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:id="@+id/status_bar" android:background="@android:color/background_dark" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="37.0dip" android:layout_marginBottom="3.0dip">
        <TextView android:textColor="@android:color/white" android:layout_gravity="center" android:id="@+id/status_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="5.0dip" />
    </LinearLayout>
</FrameLayout>